force-app/main/default/objects/CRMfusionDBR101__Batch_Key_Builder_Data__c/CRMfusionDBR101__Batch_Key_Builder_Data__c.object-meta.xml
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <description>Store information needed by the batch key builder during key building.</description>
    <label>DupeBlocker Batch Key Builder Data</label>
    <nameField>
        <displayFormat>BKB-{00000}</displayFormat>
        <label>Batch Key Builder Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Batch Key Builder Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>