force-app/main/default/objects/CRMfusionDBR101__Batch_Key_Builder_Data__c/fields/CRMfusionDBR101__Completed__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>