force-app/main/default/objects/CRMfusionDBR101__Batch_Key_Builder_Data__c/fields/CRMfusionDBR101__Current_Batch_Started__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Current_Batch_Started__c</fullName>
    <label>Current Batch Started</label>
    <type>DateTime</type>
</CustomField>