force-app/main/default/objects/CRMfusionDBR101__Batch_Key_Builder_Data__c/fields/CRMfusionDBR101__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Object_Type__c</fullName>
    <label>Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>