force-app/main/default/objects/CRMfusionDBR101__Batch_Key_Builder_Data__c/fields/CRMfusionDBR101__Rebuild_Order__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Rebuild_Order__c</fullName>
    <label>Rebuild Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>